fix: reduce function size by limiting included files

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,5 +9,11 @@
   package = "@netlify/plugin-nextjs"
 
 [functions]
-  included_files = ["node_modules/**/*"]
+  included_files = [
+    "node_modules/@netlify/functions/**/*",
+    "node_modules/next/**/*",
+    "node_modules/react/**/*",
+    "node_modules/react-dom/**/*",
+    "node_modules/netlify-identity-widget/**/*"
+  ]
   node_bundler = "esbuild" 
