--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@netlify/functions": "^2.0.0",
-        "@types/netlify-identity-widget": "^1.9.6",
+        "@supabase/supabase-js": "^2.49.4",
         "bootstrap": "^5.3.2",
-        "netlify-identity-widget": "^1.9.2",
         "next": "14.2.28",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.1",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.5.0"
     },
     "devDependencies": {
