--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.49.4",
         "bootstrap": "^5.3.2",
+        "chart.js": "^4.4.9",
         "next": "14.2.28",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.1",
+        "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.5.0"
     },
     "devDependencies": {
+        "@types/chart.js": "^2.9.41",
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.55",
         "@types/react-dom": "^18.2.19",
